tests/baselines/reference/typeGuardFunction(strict=true).errors.txt
typeGuardFunction.ts(2,5): error TS2564: Property 'propA' has no initializer and is not definitely assigned in the constructor.
typeGuardFunction.ts(6,5): error TS2564: Property 'propB' has no initializer and is not definitely assigned in the constructor.
typeGuardFunction.ts(10,5): error TS2564: Property 'propC' has no initializer and is not definitely assigned in the constructor.
typeGuardFunction.ts(23,9): error TS2454: Variable 'a' is used before being assigned.
typeGuardFunction.ts(29,8): error TS2454: Variable 'subType' is used before being assigned.
typeGuardFunction.ts(35,8): error TS2454: Variable 'union' is used before being assigned.
typeGuardFunction.ts(46,37): error TS7006: Parameter 'p1' implicitly has an 'any' type.
typeGuardFunction.ts(46,41): error TS7006: Parameter 'p2' implicitly has an 'any' type.
typeGuardFunction.ts(47,24): error TS2454: Variable 'a' is used before being assigned.
typeGuardFunction.ts(65,18): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
typeGuardFunction.ts(73,18): error TS7010: 'acceptingBoolean', which lacks return-type annotation, implicitly has an 'any' return type.
typeGuardFunction.ts(74,22): error TS2454: Variable 'a' is used before being assigned.
typeGuardFunction.ts(77,18): error TS7010: 'acceptingTypeGuardFunction', which lacks return-type annotation, implicitly has an 'any' return type.
typeGuardFunction.ts(77,50): error TS7006: Parameter 'item' implicitly has an 'any' type.
typeGuardFunction.ts(82,5): error TS2322: Type 'true | B | C' is not assignable to type 'boolean | B'.
  Type 'C' is not assignable to type 'boolean | B'.
typeGuardFunction.ts(82,31): error TS2454: Variable 'union2' is used before being assigned.
typeGuardFunction.ts(82,42): error TS2454: Variable 'union2' is used before being assigned.


==== typeGuardFunction.ts (17 errors) ====
    class A {
        propA: number;
        ~~~~~
!!! error TS2564: Property 'propA' has no initializer and is not definitely assigned in the constructor.
    }
    
    class B {
        propB: number;
        ~~~~~
!!! error TS2564: Property 'propB' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C extends A {
        propC: number;
        ~~~~~
!!! error TS2564: Property 'propC' has no initializer and is not definitely assigned in the constructor.
    }
    
    declare function isA(p1: any): p1 is A;
    declare function isB(p1: any): p1 is B;
    declare function isC(p1: any): p1 is C;
    
    declare function retC(): C;
    
    var a: A;
    var b: B;
    
    // Basic
    if (isC(a)) {
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
        a.propC;
    }
    
    // Sub type
    var subType: C;
    if(isA(subType)) {
           ~~~~~~~
!!! error TS2454: Variable 'subType' is used before being assigned.
        subType.propC;
    }
    
    // Union type
    var union: A | B;
    if(isA(union)) {
           ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.
        union.propA;
    }
    
    // Call signature
    interface I1 {
        (p1: A): p1 is C;
    }
    
    // The parameter index and argument index for the type guard target is matching.
    // The type predicate type is assignable to the parameter type.
    declare function isC_multipleParams(p1, p2): p1 is C;
                                        ~~
!!! error TS7006: Parameter 'p1' implicitly has an 'any' type.
                                            ~~
!!! error TS7006: Parameter 'p2' implicitly has an 'any' type.
    if (isC_multipleParams(a, 0)) {
                           ~
!!! error TS2454: Variable 'a' is used before being assigned.
        a.propC;
    }
    
    // Methods
    var obj: {
        func1(p1: A): p1 is C;
    }
    class D {
        method1(p1: A): p1 is C {
            return true;
        }
    }
    
    // Arrow function
    let f1 = (p1: A): p1 is C => false;
    
    // Function type
    declare function f2(p1: (p1: A) => p1 is C);
                     ~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
    
    // Function expressions
    f2(function(p1: A): p1 is C {
        return true;
    });
    
    // Evaluations are asssignable to boolean.
    declare function acceptingBoolean(a: boolean);
                     ~~~~~~~~~~~~~~~~
!!! error TS7010: 'acceptingBoolean', which lacks return-type annotation, implicitly has an 'any' return type.
    acceptingBoolean(isA(a));
                         ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // Type predicates with different parameter name.
    declare function acceptingTypeGuardFunction(p1: (item) => item is A);
                     ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'acceptingTypeGuardFunction', which lacks return-type annotation, implicitly has an 'any' return type.
                                                     ~~~~
!!! error TS7006: Parameter 'item' implicitly has an 'any' type.
    acceptingTypeGuardFunction(isA);
    
    // Binary expressions
    let union2: C | B;
    let union3: boolean | B = isA(union2) || union2;
        ~~~~~~
!!! error TS2322: Type 'true | B | C' is not assignable to type 'boolean | B'.
!!! error TS2322:   Type 'C' is not assignable to type 'boolean | B'.
                                  ~~~~~~
!!! error TS2454: Variable 'union2' is used before being assigned.
                                             ~~~~~~
!!! error TS2454: Variable 'union2' is used before being assigned.